target/rls/debug/build/eyre-7985a37dab14f52f/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> c:\Users\user\Desktop\Patnic-CLI\target\rls\debug\build\eyre-7985a37dab14f52f\out\probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
